--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
-name = "curltimer"
+name = "tmmr"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-tokio = { version = "1.35.1", features = ["full"] }
+tokio = { version = "1.35.1", features = ["io-util", "macros", "time", "net", "rt-multi-thread"]}
