--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.41"
 tokio = { version = "1.35.1", features = ["io-util", "macros", "time", "net", "rt-multi-thread"]}
